--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ nav .side-nav .side-nav-content a:hover{
 /* -------------------------------------------------------------------------------------------------------- */
 .banner{
     height: 100vh;
-    background-image: url(../img/banner-slider/4.jpg);
+    background-image: url(../img/banner-slider/1.webp);
     background-position: 50% 80%;
     background-size: cover;
     background-repeat: no-repeat;
