--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
 /* -----Cerebi Sans-------- */
 @font-face {
